<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/Standrdbtn"
            style="@style/standardtextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:background="@drawable/btnshape"
            android:text="@string/standard" />

        <Button
            android:id="@+id/Deluxbtn"
            style="@style/standardtextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Standrdbtn"
            android:background="@drawable/btnshape"
            android:text="@string/delux" />

        <Button
            android:id="@+id/Luxurybtn"
            style="@style/standardtextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_below="@id/Deluxbtn"
            android:background="@drawable/btnshape"
            android:text="@string/luxury" />

        <Button
            android:id="@+id/allbtn"
            style="@style/standardtextstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:layout_below="@id/Luxurybtn"
            android:background="@drawable/btnshape"
            android:text="@string/all" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>