<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <EditText
        android:id="@+id/guestno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/capacity"
        android:layout_centerHorizontal="true"
       />


        <Button
            android:id="@+id/Room1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            style="@style/standardtextstyle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/guestno"
            android:text="@string/room_no1"/>
        <Button
            android:id="@+id/Room2"
            android:layout_below="@id/Room1"
            android:layout_marginTop="10dp"
            style="@style/standardtextstyle"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/room_2"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>